--- a/projekt/index.html
+++ b/projekt/index.html
@@ -12,10 +12,17 @@
 
 <body>
     
-    <div>To jest tekst w DIVie</div>
+    <!-- <div>To jest tekst w DIVie</div>
     <p>To jest tekst w paragrafie</p>
-    <span>To jest tekst w SPANie</span>
+    <span>To jest tekst w SPANie</span> -->
 
+    <h1>123</h1>
+    <h2>123</h2>
+    <h3>123</h3>
+    <h4>123</h4>
+    <h5>123</h5>
+    <h6>123</h6>
+    
 </body>
 
 </html>
