--- a/projekt/index.html
+++ b/projekt/index.html
@@ -16,13 +16,18 @@
     <p>To jest tekst w paragrafie</p>
     <span>To jest tekst w SPANie</span> -->
 
-    <h1>123</h1>
+    <!-- <h1>123</h1>
     <h2>123</h2>
     <h3>123</h3>
     <h4>123</h4>
     <h5>123</h5>
-    <h6>123</h6>
-    
+    <h6>123</h6> -->
+
+    <!-- <a>Link</a>
+    <a href="https://google.pl">link</a>
+    <a href="https://google.pl" target="_blank">link</a>
+    <a href="https://google.pl" target="blank">link</a>
+    <a href="https://google.pl" target="blank" rel="noopener">link</a> -->
 </body>
 
 </html>
