--- a/projekt/index.html
+++ b/projekt/index.html
@@ -28,6 +28,16 @@
     <a href="https://google.pl" target="_blank">link</a>
     <a href="https://google.pl" target="blank">link</a>
     <a href="https://google.pl" target="blank" rel="noopener">link</a> -->
+
+    <!-- <header></header>
+    <nav></nav>
+    <main>
+        <section></section>
+        <section></section>
+    </main>
+    <aside></aside>
+    <footer> </footer> -->
+
 </body>
 
 </html>
