--- a/projekt/index.html
+++ b/projekt/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- <meta name="author" content="Jan Kowalski" />
+    <meta name="keywords" content="gotowanie, kuchnia, warzywa, przepisy, mięso, schabowe"/>
+    <meta name="description" content="Blog o gotowaniu" /> -->
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>MMC School</title>
