--- a/projekt/index.html
+++ b/projekt/index.html
@@ -1,48 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- <meta name="author" content="Jan Kowalski" />
-    <meta name="keywords" content="gotowanie, kuchnia, warzywa, przepisy, mięso, schabowe"/>
-    <meta name="description" content="Blog o gotowaniu" /> -->
-
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
+    <title>Szymon Szczurowski </title>
     <link rel="stylesheet" href="style.css">
-    <title>MMC School</title>
 </head>
-
 <body>
+    <h1>Jestem mocarnym nagłówkiem!</h1>
+
+    <p>To moja pierwsza strona internetowa!:)</p>
+
+    <h6>Najmniejszt nagłowek</h6>
+
+    <strong>Ależ się czuję pogrubiony sematycznie</strong>
+<br>
+    <a href="https:/google.pl">Goggle</a>
     
-    <!-- <div>To jest tekst w DIVie</div>
-    <p>To jest tekst w paragrafie</p>
-    <span>To jest tekst w SPANie</span> -->
+    <ul>
+        <li>Elementr numer 1</li>
+        <li>Elementr numer 2</li>
+        <li>Elementr numer 3</li>
+        <li>Elementr numer 4</li>
+        <li>Elementr numer 5</li>
+    </ul>
 
-    <!-- <h1>123</h1>
-    <h2>123</h2>
-    <h3>123</h3>
-    <h4>123</h4>
-    <h5>123</h5>
-    <h6>123</h6> -->
+    <style>
+        img{
+            width: 500px;
+        }
+    </style>
 
-    <!-- <a>Link</a>
-    <a href="https://google.pl">link</a>
-    <a href="https://google.pl" target="_blank">link</a>
-    <a href="https://google.pl" target="blank">link</a>
-    <a href="https://google.pl" target="blank" rel="noopener">link</a> -->
-
-    <!-- <header></header>
-    <nav></nav>
-    <main>
-        <section></section>
-        <section></section>
-    </main>
-    <aside></aside>
-    <footer> </footer> -->
-
+<img  src="https://static.gotujmy.pl/VIDEO_BIG/bitki-schabowe-w-sosie-361854.jpg" alt="Kotler polany sosem pieczarkowym, a bok pieczone ziemniaki i warzywa na parze">
 </body>
-
 </html>
