--- a/projekt/index.html
+++ b/projekt/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Szymon Szczurowski </title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Jestem mocarnym nagłówkiem!</h1>
 
@@ -14,10 +16,10 @@
 
     <h6>Najmniejszt nagłowek</h6>
 
-    <strong>Ależ się czuję pogrubiony sematycznie</strong>
-<br>
+    <p><strong>Ależ się czuję pogrubiony sematycznie</strong></p>
+    <br>
     <a href="https:/google.pl">Goggle</a>
-    
+
     <ul>
         <li>Elementr numer 1</li>
         <li>Elementr numer 2</li>
@@ -27,11 +29,13 @@
     </ul>
 
     <style>
-        img{
+        img {
             width: 500px;
         }
     </style>
 
-<img  src="https://static.gotujmy.pl/VIDEO_BIG/bitki-schabowe-w-sosie-361854.jpg" alt="Kotler polany sosem pieczarkowym, a bok pieczone ziemniaki i warzywa na parze">
+    <img src="https://static.gotujmy.pl/VIDEO_BIG/bitki-schabowe-w-sosie-361854.jpg"
+        alt="Kotler polany sosem pieczarkowym, a bok pieczone ziemniaki i warzywa na parze">
 </body>
+
 </html>
