--- a/projekt/Zadanie/kontakt.html
+++ b/projekt/Zadanie/kontakt.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/kontakt.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;600;800&display=swap" rel="stylesheet">
@@ -35,37 +36,8 @@
 
     <main>
 
-        <h2>O nas</h2>
-
-        <div class="about-us-box top">
-            <div class="about-us-bg"></div>
-            <div class="about-us-text">
-                <h3>Kochamy kwawe</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, earum. Numquam natus a nemo officia
-                    id corporis fugit ea accusamus.</p>
-            </div>
-        </div>
-
-
-        <div class="about-us-box middle">
-            <div class="about-us-bg"></div>
-            <div class="about-us-text">
-                <h3>Jestśmy kreatywni</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit veniam incidunt alias
-                    adipisci sequi perferendis architecto nemo? Animi, laboriosam provident.</p>
-            </div>
-        </div>
-
-
-        <div class="about-us-box bottom">
-            <div class="about-us-bg"></div>
-            <div class="about-us-text">
-                <h3>Libumy naszą pracę</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi ex iusto est! Corrupti eveniet
-                    voluptates autem ratione officia vero commodi.</p>
-            </div>
-        </div>
-
+        <p class="contact-info"><i class="fa-solid fa-mobile-screen"></i>+48 000 000 000</p>
+        <p class="contact-info"><i class="fa-solid fa-envelope-open"></i>firma@gmail.com</p>
     </main>
 
     <footer>
