--- a/projekt/responsywna/index.html
+++ b/projekt/responsywna/index.html
@@ -35,8 +35,59 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
         </div>
     </header>
-    
-    <main></main>
+
+    <main>
+        <section class="about-us wrapper">
+            <h2 class="section-title">o nas</h2>
+            <p class="about-us-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis consequatur
+                asperiores consequuntur accusantium nesciunt cupiditate eius debitis omnis veniam quae!</p>
+            <p class="about-us-info">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit provident laudantium et sit! Assumenda
+                iste atque odio, nihil quia itaque?
+            </p>
+        </section>
+
+        <section class="products wrapper">
+            <h2 class="section-title">produkt</h2>
+            <div class="product first-product">
+                <div class="hero-bg"></div>
+                <div class="hero-text">
+                    <h3>przyjazne dzieciom</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="products wrapper">
+            <div class="product second-product">
+                <div class="hero-bg"></div>
+                <div class="hero-text">
+                    <h3>najnowsze technologie</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="products wrapper">
+            <div class="product third-product">
+                <div class="hero-bg"></div>
+                <div class="hero-text">
+                    <h3>user friendly</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="products wrapper">
+            <div class="product fourth-product">
+                <div class="hero-bg"></div>
+                <div class="hero-text">
+                    <h3>kompatybilne z wieloma urządzeniami</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 
 </body>
