--- a/projekt/Zadanie2/index.html
+++ b/projekt/Zadanie2/index.html
@@ -4,6 +4,134 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header></header>
+    <nav></nav>
+
+    <main>
+        <section></section>
+        <section></section>
+    </main>
+
+    <aside></aside>
+    <footer></footer>
+
+    <button></button>
+
+    <label for="">TEKST</label>
+
+    <form action="">
+    
+        <select name="" id="">
+            <option value="">TESKT</option>
+            <option value="">TESKT</option>
+            <option value="">TESKT</option>
+        </select>
+
+        <input type="text">
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <input type="checkbox" checked>
+        <input type="checkbox">
+        <input type="radio">
+        <input type="color">
+        <input type="data">
+        <input type="password">
+    </form>
+    
+
+<del>PRZEKREŚŁONY TEXT</del>
+
+coś usunąć i zostawić na stronie
+
+<s>PRZEKREŚŁONY TEKST</s>
+
+przekreślić nieaktualny kod
+
+<b>POGRUBIONY TEKST</b>
+
+zwykły pogrubiony tekst
+
+<strong>POGRUBIONY TKEST</strong>
+
+podnosi wartość sematyczną
+
+<i>POCHYLONY TEKST</i>
+
+zwykły pochylony tekst
+
+<em>POCHYLONY TEKST</em>
+
+podnosi wartość sematyczną
+
+<u>PODKREŚLENIE TEKSTU</u>
+
+<mark>Żółte tło</mark>
+
+<sup>INDEX GÓRNY</sup>
+<sub>INDEX DOLNY</sub>
+
+&nbsp; - spacja
+
+Czynności nie sematyczne powinno robić się w CSS
+
+
+<ul>
+
+<li></li>
+<li></li>
+<li></li>
+
+</ul>
+
+lista uporządkowana
+
+<ol>
+
+    <li></li>
+    <li></li>
+    <li></li>
+
+</ol>
+
+lista nieuporządkowana
+
+<table>
+    <thead>
+        <tr>
+            <th>Danie</th>
+            <th>Cena</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Kotlet</td>
+            <td>15zł</td>
+        </tr>
+        <tr>
+            <td>Pespi</td>
+            <td>10zl</td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <tr>
+            <td>Suma</td>
+            <td>20zł</td>
+        </tr>
+    </tfoot>
+</table>
+</body>
+</html>
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Document</title>
 
@@ -19,4 +147,4 @@
     <div class="child"></div>
 </div>
 </body>
-</html>
+</html> -->
