--- a/projekt2/bootstrap/listy.html
+++ b/projekt2/bootstrap/listy.html
@@ -9,27 +9,14 @@
 
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet.</h1>
-    <p class="h1"></p>
-    <h2>Lorem ipsum dolor sit amet.</h2>
-    <h3>Lorem ipsum dolor sit amet.</h3>
-    <h4>Lorem ipsum dolor sit amet.</h4>
-    <h5>Lorem ipsum dolor sit amet.</h5>
-    <h6>Lorem ipsum dolor sit amet.</h6>
-    <div class="display-1">Lorem ipsum dolor sit amet.</div>
-    <div class="lead">lorem</div>
-    <div class="text-muted"></div>
 
-
-    <div class="container">
-        <p class="text-start">Lorem, ipsum dolor.</p>
-    </div>
-    <div class="container">
-        <p class="text-center">Lorem, ipsum dolor.</p>
-    </div>
-    <div class="container">
-        <p class="text-end">Lorem, ipsum dolor.</p>
-    </div>
+    <ul class="list-inline">
+        <li class="list-inline-item">Element nr 1</li>
+        <li class="list-inline-item">Element nr 2</li>
+        <li class="list-inline-item">Element nr 3</li>
+        <li class="list-inline-item">Element nr 4</li>
+        <li class="list-inline-item">Element nr 5</li>
+    </ul>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
