--- a/projekt2/bootstrap/obrazy.html
+++ b/projekt2/bootstrap/obrazy.html
@@ -9,27 +9,15 @@
 
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet.</h1>
-    <p class="h1"></p>
-    <h2>Lorem ipsum dolor sit amet.</h2>
-    <h3>Lorem ipsum dolor sit amet.</h3>
-    <h4>Lorem ipsum dolor sit amet.</h4>
-    <h5>Lorem ipsum dolor sit amet.</h5>
-    <h6>Lorem ipsum dolor sit amet.</h6>
-    <div class="display-1">Lorem ipsum dolor sit amet.</div>
-    <div class="lead">lorem</div>
-    <div class="text-muted"></div>
 
+<img src="https://cdn.pixabay.com/photo/2022/08/13/09/05/lion-7383228_960_720.jpg" alt="Lew" class="img-fluid">
 
-    <div class="container">
-        <p class="text-start">Lorem, ipsum dolor.</p>
-    </div>
-    <div class="container">
-        <p class="text-center">Lorem, ipsum dolor.</p>
-    </div>
-    <div class="container">
-        <p class="text-end">Lorem, ipsum dolor.</p>
-    </div>
+<img src="https://cdn.pixabay.com/photo/2022/08/13/09/05/lion-7383228_960_720.jpg" alt="Lew" class="img-thumbnail">
+
+<p><img src="https://cdn.pixabay.com/photo/2022/08/13/09/05/lion-7383228_960_720.jpg" alt="Lew" class="float-start" style="width: 300px;">
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio perspiciatis blanditiis magnam explicabo tempora delectus expedita doloribus eveniet non! Nam!   
+</p>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
