--- a/projekt2/strona/index.html
+++ b/projekt2/strona/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>ProGarmers</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -14,11 +14,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    <h1>Hello, world!</h1>
+<body data-bs-spy="scroll" data-bs-target="#navbar">
 
+    <nav id="navbar" class="navbar navbar-expand-lg position-sticky top-0">
+        <div class="container">
+            <a class="navbar-brand" href="#"><i class="fa-solid fa-headset"></i>progamers</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ms-auto">
 
+                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="#aboutus">Features</a>
+                    <a class="nav-link" href="#portofolio">Pricing</a>
+                    <a class="nav-link" href="#prices">Features</a>
+                    <a class="nav-link" href="#team">Pricing</a>
+                    <a class="nav-link" href="#achievements">Features</a>
+                    <a class="nav-link" href="#contact">Pricing</a>
 
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <div id="team"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
