--- a/projekt2/strona/index.html
+++ b/projekt2/strona/index.html
@@ -17,10 +17,10 @@
 
 <body data-bs-spy="scroll" data-bs-target="#navbar">
 
-    <nav id="navbar" class="navbar navbar-expand-lg position-sticky top-0">
+    <nav id="navbar" class="navbar navbar-expand-lg position-fixed top-0 w-100">
         <div class="container">
             <a class="navbar-brand" href="#"><i class="fa-solid fa-headset"></i>pro<span
-                    class="second-name">gamers</span></a>
+                    class="blue-text">gamers</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
@@ -44,19 +44,26 @@
         <div class="hero-img">
             <div class="hero-shadow"></div>
             <div class="hero-text">
-                <h1>witajcie w progamers</h1>
+                <h1>witajcie w pro<span class="blue-text">gamers</span></h1>
                 <p>w miejscu, gdzie gry tworzymy z pasją</p>
+                <a href="#aboutus" type="button" class="btn btn-outline-light">poznaj nas</a>
             </div>
+            <a href="#aboutus"> <i class="fa-sharp fa-solid fa-chevron-down"></i>
+            </a>
         </div>
     </header>
 
     <div style="height: 100vh"></div>
+
+    <div id="aboutus">
+        aboutus
+    </div>
 
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
         </script>
-</body>
+        <script src="./js/"></script>
 
 </html>
