--- a/projekt2/strona/index.html
+++ b/projekt2/strona/index.html
@@ -17,7 +17,7 @@
 
 <body data-bs-spy="scroll" data-bs-target="#navbar">
 
-    <nav id="navbar" class="navbar navbar-expand-lg position-fixed top-0 w-100">
+    <nav id="navbar" class="navbar navbar-expand-lg position-fixed top-0 w-100 py-3">
         <div class="container">
             <a class="navbar-brand" href="#"><i class="fa-solid fa-headset"></i>pro<span
                     class="blue-text">gamers</span></a>
@@ -53,17 +53,55 @@
         </div>
     </header>
 
-    <div style="height: 100vh"></div>
+    <main>
+        <section id="aboutus" class="aboutus bg-light py-5">
+            <div class="container">
+                <h2>o nas</h2>
+                <div class="underline"></div>
 
-    <div id="aboutus">
-        aboutus
-    </div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p><i class="fa-solid fa-mobile-screen-button"></i></p>
+                        <p class="aboutus-card-title mb-1">mobile gaming</p>
+                        <p class="aboutus-card-text">Tworzymy gry na urządzenia mobilne</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p><i class="fa-solid fa-desktop"></i></p>
+                        <p class="aboutus-card-title mb-1">desktop gaming</p>
+                        <p class="aboutus-card-text">Tworzymy gry na PC!</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p><i class="fa-solid fa-file-code"></i></p>
+                        <p class="aboutus-card-title mb-1">najwyższe standardy</p>
+                        <p class="aboutus-card-text">Zachowujemy najwyższe standardy podczas pisania kodu</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p><i class="fa-solid fa-paw"></i></p>
+                        <p class="aboutus-card-title mb-1">kochamy zwierzęta!</p>
+                        <p class="aboutus-card-text">Wszystkie nasze gry są bezpieczne dla środowiska.:)</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p><i class="fa-solid fa-burger"></i></p>
+                        <p class="aboutus-card-title mb-1">lubimy dobre jedzenia</p>
+                        <p class="aboutus-card-text">Lubimy dobrze zjeść przed przystąpieniem do naszych zadań</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p><i class="fa-solid fa-martini-glass"></i></p>
+                        <p class="aboutus-card-title mb-1">świetne relacje</p>
+                        <p class="aboutus-card-text">Zachowujemy świetne relacje z naszymi klientami!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
 
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
         </script>
-        <script src="./js/"></script>
+    <script src="./js/script.js"></script>
 
 </html>
