--- a/projekt2/strona/index.html
+++ b/projekt2/strona/index.html
@@ -93,6 +93,61 @@
                 </div>
             </div>
         </section>
+
+        <section class="aboutus-hero py-5">
+            <!-- <div class="hero-img">
+                <div class="hero-shadow"></div>
+                <div class="hero-text">
+                    <div class="container">
+                        <h2>tworzymy gry na platformy</h2>
+                        <div class="underline"></div>
+                        <div class="row">
+                            <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                                <p><i class="fa-solid fa-desktop"></i></p>
+                                <p class="aboutus-card-title mb-1">PC</p>
+                                <p class="aboutus-card-text">Graj ze znajomymi na swoim blaszku</p>
+                            </div>
+                            <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                                <p><i class="fa-brands fa-playstation"></i></p>
+
+                                <p class="aboutus-card-title mb-1">PlayStation</p>
+                                <p class="aboutus-card-text">Gry świetnie prezentują się na konsoli od sony</p>
+                            </div>
+                            <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                                <p><i class="fa-brands fa-xbox"></i></p>
+                                <p class="aboutus-card-title mb-1">Xbox</p>
+                                <p class="aboutus-card-text">Fani Xboxa spędzą z nami mnóstwo godzin!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+            <div class="aboutus-shadow"></div>
+            <div class="container">
+                <h2>tworzymy gry na platformy</h2>
+                <div class="underline"></div>
+                <div class="row">
+
+
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p><i class="fa-solid fa-desktop"></i></p>
+                        <p class="aboutus-card-title mb-1">PC</p>
+                        <p class="aboutus-card-text">Graj ze znajomymi na swoim blaszaku</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p><i class="fa-brands fa-playstation"></i></p>
+
+                        <p class="aboutus-card-title mb-1">PlayStation</p>
+                        <p class="aboutus-card-text">Gry świetnie prezentują się na konsoli od sony</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p><i class="fa-brands fa-xbox"></i></p>
+                        <p class="aboutus-card-title mb-1">Xbox</p>
+                        <p class="aboutus-card-text">Fani Xboxa spędzą z nami mnóstwo godzin!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
