--- a/projekt2/strona/index.html
+++ b/projekt2/strona/index.html
@@ -95,64 +95,30 @@
         </section>
 
         <section class="aboutus-hero py-5">
-            <!-- <div class="hero-img">
-                <div class="hero-shadow"></div>
-                <div class="hero-text">
-                    <div class="container">
-                        <h2>tworzymy gry na platformy</h2>
-                        <div class="underline"></div>
-                        <div class="row">
-                            <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                                <p><i class="fa-solid fa-desktop"></i></p>
-                                <p class="aboutus-card-title mb-1">PC</p>
-                                <p class="aboutus-card-text">Graj ze znajomymi na swoim blaszku</p>
-                            </div>
-                            <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                                <p><i class="fa-brands fa-playstation"></i></p>
-
-                                <p class="aboutus-card-title mb-1">PlayStation</p>
-                                <p class="aboutus-card-text">Gry świetnie prezentują się na konsoli od sony</p>
-                            </div>
-                            <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                                <p><i class="fa-brands fa-xbox"></i></p>
-                                <p class="aboutus-card-title mb-1">Xbox</p>
-                                <p class="aboutus-card-text">Fani Xboxa spędzą z nami mnóstwo godzin!</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
             <div class="aboutus-shadow"></div>
-            <div class="container">
+            <div class="container py-4">
                 <h2>tworzymy gry na platformy</h2>
                 <div class="underline"></div>
                 <div class="row">
-
-
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p><i class="fa-solid fa-desktop"></i></p>
-                        <p class="aboutus-card-title mb-1">PC</p>
-                        <p class="aboutus-card-text">Graj ze znajomymi na swoim blaszaku</p>
+                    <div class="col-lg-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">PC</p>
+                        <p><i class="fab fa-steam-square"></i></p>
+                        <p class="aboutus-hero-text">Graj ze znajomymi na swoim blaszaku!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p><i class="fa-brands fa-playstation"></i></p>
-
-                        <p class="aboutus-card-title mb-1">PlayStation</p>
-                        <p class="aboutus-card-text">Gry świetnie prezentują się na konsoli od sony</p>
+                    <div class="col-lg-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">PlayStation</p>
+                        <p><i class="fab fa-playstation"></i></p>
+                        <p class="aboutus-hero-text">Gry świetnie prezentują się na konsoli od Sony!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p><i class="fa-brands fa-xbox"></i></p>
-                        <p class="aboutus-card-title mb-1">Xbox</p>
-                        <p class="aboutus-card-text">Fani Xboxa spędzą z nami mnóstwo godzin!</p>
+                    <div class="col-lg-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">Xbox</p>
+                        <p><i class="fab fa-xbox"></i></p>
+                        <p class="aboutus-hero-text">Fani Xboxa spędzą z nami mnóstwo godzin!</p>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
