--- a/projekt2/strona/index.html
+++ b/projekt2/strona/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/229f2b7f7b.js" crossorigin="anonymous"></script>
 </head>
@@ -43,9 +44,9 @@
         <div class="hero-img">
             <div class="hero-shadow"></div>
             <div class="hero-text">
-                <h1>witajcie w pro<span class="blue-text">gamers</span></h1>
-                <p>W miejscu, gdzie gry tworzymy z pasją</p>
-                <a href="#aboutus" type="button" class="btn btn-outline-light">poznaj nas</a>
+                <h1 data-aos="fade-up" data-aos-delay="200">witajcie w pro<span class="blue-text">gamers</span></h1>
+                <p data-aos="fade-up" data-aos-delay="400">W miejscu, gdzie gry tworzymy z pasją</p>
+                <a data-aos="fade-up" data-aos-delay="600" href="#aboutus" type="button" class="btn btn-outline-light">poznaj nas</a>
             </div>
             <a href="#aboutus"><i class="fas fa-chevron-down bounce-top"></i></a>
         </div>
@@ -58,32 +59,32 @@
                 <div class="underline"></div>
 
                 <div class="row">
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="100">
                         <p><i class="fas fa-mobile-alt"></i></p>
                         <p class="aboutus-card-title mb-1">mobile gaming</p>
                         <p class="aboutus-card-text">Tworzymy gry na urządzenia mobilne!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="200">
                         <p><i class="fas fa-desktop"></i></p>
                         <p class="aboutus-card-title mb-1">desktop gaming</p>
                         <p class="aboutus-card-text">Tworzymy gry na PC!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="300">
                         <p><i class="fas fa-file-code"></i></p>
                         <p class="aboutus-card-title mb-1">najwyższe standardy</p>
                         <p class="aboutus-card-text">Zachowujemy najwyższe standardy podczas pisania kodu.</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="400">
                         <p><i class="fas fa-paw"></i></p>
                         <p class="aboutus-card-title mb-1">kochamy zwierzęta!</p>
                         <p class="aboutus-card-text">Wszystkie nasze gry są bezpieczne dla środowiska. :)</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="500">
                         <p><i class="fas fa-hamburger"></i></p>
                         <p class="aboutus-card-title mb-1">lubimy dobre jedzenie</p>
                         <p class="aboutus-card-text">Lubimy dobrze zjeść przed przystąpieniem do naszych zadań.</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="600">
                         <p><i class="fas fa-glass-cheers"></i></p>
                         <p class="aboutus-card-title mb-1">świetne relacje</p>
                         <p class="aboutus-card-text">Zachowujemy świetne relacje z naszymi klientami!</p>
@@ -98,17 +99,17 @@
                 <h2>tworzymy gry na platformy</h2>
                 <div class="underline"></div>
                 <div class="row">
-                    <div class="col-lg-4 text-center aboutus-hero-item">
+                    <div class="col-lg-4 text-center aboutus-hero-item" data-aos="zoom-in" data-aos-delay="700">
                         <p class="aboutus-hero-title mb-1">PC</p>
                         <p><i class="fab fa-steam-square"></i></p>
                         <p class="aboutus-hero-text">Graj ze znajomymi na swoim blaszaku!</p>
                     </div>
-                    <div class="col-lg-4 text-center aboutus-hero-item">
+                    <div class="col-lg-4 text-center aboutus-hero-item" data-aos="zoom-in" data-aos-delay="800">
                         <p class="aboutus-hero-title mb-1">PlayStation</p>
                         <p><i class="fab fa-playstation"></i></p>
                         <p class="aboutus-hero-text">Gry świetnie prezentują się na konsoli od Sony!</p>
                     </div>
-                    <div class="col-lg-4 text-center aboutus-hero-item">
+                    <div class="col-lg-4 text-center aboutus-hero-item" data-aos="zoom-in" data-aos-delay="900">
                         <p class="aboutus-hero-title mb-1">Xbox</p>
                         <p><i class="fab fa-xbox"></i></p>
                         <p class="aboutus-hero-text">Fani Xboxa spędzą z nami mnóstwo godzin!</p>
@@ -194,7 +195,7 @@
             <div class="container">
 
                 <div class="price-wrap row text-center justify-content-center">
-                    <div class="col-md-6 col-xl-4">
+                    <div class="col-md-6 col-xl-4" data-aos="flip-left" data-aos-delay="100">
                         <div class="price-box">
                             <h3>mobile</h3>
                             <hr>
@@ -206,7 +207,7 @@
                             <button class="btn btn-secondary">zamawiam</button>
                         </div>
                     </div>
-                    <div class="col-md-6 col-xl-4">
+                    <div class="col-md-6 col-xl-4" data-aos="flip-left" data-aos-delay="300">
                         <div class="price-box">
                             <h3>mobile & pc</h3>
                             <hr>
@@ -219,13 +220,12 @@
                             <button class="btn btn-primary">zamawiam</button>
                         </div>
                     </div>
-                    <div class="col-md-6 col-xl-4">
+                    <div class="col-md-6 col-xl-4" data-aos="flip-left" data-aos-delay="500">
                         <div class="price-box">
                             <h3>full pack</h3>
                             <hr>
                             <p><span>Urządzenia:</span> <i class="fas fa-mobile-alt"></i> <i class="fas fa-desktop"></i>
-                                <i class="fas fa-gamepad"></i>
-                            </p>
+                                <i class="fas fa-gamepad"></i></p>
                             <p><span>Długość gry:</span> Długa</p>
                             <p><span>Grafika:</span> Najlepsza</p>
                             <p><span>Online:</span> Tak</p>
@@ -243,17 +243,11 @@
                         PC
                         oraz konsole.</p>
                 </div>
-
             </div>
         </section>
-
         <section id="team" class="team py-5">
-
-
-
             <h2>team</h2>
             <div class="underline"></div>
-
             <div class="container">
                 <div class="card-group team-carousel">
                     <div class="card mx-3">
@@ -314,11 +308,8 @@
                     </div>
                 </div>
             </div>
-
             <div class="team-shadow"></div>
-
         </section>
-
 
         <section id="achievements" class="achievements py-5">
             <h2>osiągnięcia</h2>
@@ -327,32 +318,32 @@
             <div class="container">
                 <div class="row text-center achievements-list">
 
-                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement" data-aos="zoom-in" data-aos-delay="100">
                         <i class="fas fa-thumbs-up"></i>
                         <p class="achievement-number">100%</p>
                         <p class="achievement-text">zadowolonych klientów</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement" data-aos="zoom-in" data-aos-delay="250">
                         <i class="fas fa-trophy"></i>
                         <p class="achievement-number">37</p>
                         <p class="achievement-text">zdobytych nagród</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement" data-aos="zoom-in" data-aos-delay="150">
                         <i class="fas fa-user-friends"></i>
                         <p class="achievement-number">143</p>
                         <p class="achievement-text">pracowników</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement" data-aos="zoom-in" data-aos-delay="250">
                         <i class="far fa-building"></i>
                         <p class="achievement-number">7</p>
                         <p class="achievement-text">nowoczesnych biur</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement" data-aos="zoom-in" data-aos-delay="100">
                         <i class="fas fa-dice"></i>
                         <p class="achievement-number">58</p>
                         <p class="achievement-text">stworzonych gier</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achievement">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achievement" data-aos="zoom-in" data-aos-delay="300">
                         <i class="fas fa-share-alt"></i>
                         <p class="achievement-number">80.000</p>
                         <p class="achievement-text">fanów w social media</p>
@@ -369,12 +360,13 @@
             <div class="container">
 
                 <div class="row text-center contact-us">
+
                     <div class="col-sm-6 col-lg-4 contact-item order-1">
                         <h3>główna siedziba</h3>
-                        <p>ul. Długa 5</p>
-                        <p>00-000 Gdańsk</p>
+                        <p>ul. Długa 0</p>
+                        <p>00-000 Kraków</p>
                         <p>+48 000 000 000</p>
-                        <p>mail.@wp.pl</p>
+                        <p>mail@mail.pl</p>
                     </div>
                     <div class="col-lg-4 order-0 order-lg-1 contact-item">
                         <h3>social media</h3>
@@ -385,22 +377,22 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4 contact-item order-1">
-                        <h3>siedziba w Londynie</h3>
+                        <h3>siedziba w londynie</h3>
                         <p>000-000 King Street</p>
                         <p>London 000 000</p>
                         <p>+44 20 0000 0000</p>
-                        <p>mail-london.@wp.pl</p>
+                        <p>mail-london@mail.pl</p>
                     </div>
                 </div>
             </div>
+
             <div class="contact-shadow"></div>
         </section>
-
-        <footer class="bg-dark text-light py-4 text-center">
-            <p class="mb-0">&copy; 2022 | ProGamers</p>
-        </footer>
-
     </main>
+
+    <footer class="bg-dark text-light py-4 text-center">
+        <p class="mb-0"> &copy; 2077 | ProGamers</p>
+    </footer>
 
 
 
@@ -408,7 +400,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
         </script>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init(
+            {
+                startEvent: 'DOMContentLoaded',
+                offset: 200,
+                once: true
+            }
+        );
+    </script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
@@ -416,3 +417,4 @@
     <script src="./js/script.js"></script>
 
 </html>
+
