--- a/projekt/box/index.html
+++ b/projekt/box/index.html
@@ -5,19 +5,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Creative Design</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/projekt2/css/style-box.css">
+    <script src="https://kit.fontawesome.com/229f2b7f7b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <header class="header">
+        <div class="header-img">
+            <div class="header-text">
+                <h1>Creative Design</h1>
+                <p>z nami stworzysz swoją wymarzoną stronę internetową!</p>
+            </div>
+            <div class="header-bg"></div>
 
-<button class="btn-zoom">zoom</button>
-<button class="btn-move">move</button>
-<button class="btn-color">color</button>
+        </div>
+    </header>
 
-<div class="square blue"></div>
-<div class="square red"></div>
-<div class="square green"></div>
+    <nav class="nav">
+        <ul>
+            <li class="nav-item"><a href=""> home</a></li>
+            <li class="nav-item"><a href="">usługi</a> </li>
+            <li class="nav-item"><a href="">cennik</a> </li>
+            <li class="nav-item"><a href="">kontakt</a> </li>
+        </ul>
+    </nav>
+
+    <main class="main">
+        <h2>o nas</h2>
+
+        <div class="main-img one">
+
+            <div class="main-bg">
+                <div class="main-text">
+                    <h1>Creative Design</h1>
+                    <p>z nami stworzysz swoją wymarzoną stronę internetową!</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="main-img two">
+
+            <div class="main-bg">
+                <div class="main-text">
+                    <h1>Creative Design</h1>
+                    <p>z nami stworzysz swoją wymarzoną stronę internetową!</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="main-img three">
+
+            <div class="main-bg">
+                <div class="main-text">
+                    <h1>Creative Design</h1>
+                    <p>z nami stworzysz swoją wymarzoną stronę internetową!</p>
+                </div>
+            </div>
+        </div>
+
+    </main>
+
+    <footer class="footer">
+        <p>&copy; 2022 Creative Design
+            <span class="icon-box">
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </span>
+        </p>
+    </footer>
 </body>
 
 </html>
