--- a/projekt/box/index.html
+++ b/projekt/box/index.html
@@ -5,79 +5,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creative Design</title>
+    <title>strona</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="/projekt2/css/style-box.css">
-    <script src="https://kit.fontawesome.com/229f2b7f7b.js" crossorigin="anonymous"></script>
+
 </head>
 
-<body>
-    <header class="header">
-        <div class="header-img">
-            <div class="header-text">
-                <h1>Creative Design</h1>
-                <p>z nami stworzysz swoją wymarzoną stronę internetową!</p>
-            </div>
-            <div class="header-bg"></div>
-
+<header class="header">
+    <div class="header-img">
+        <div class="header-text">
+            <h1 class="header-title">Creative Design</h1>
+            <p class="header-description">z nami stworzysz swoją wymarzoną stronę internetową</p>
         </div>
-    </header>
+        <div class="header-shadow"></div>
+    </div>
+</header>
 
-    <nav class="nav">
-        <ul>
-            <li class="nav-item"><a href=""> home</a></li>
-            <li class="nav-item"><a href="">usługi</a> </li>
-            <li class="nav-item"><a href="">cennik</a> </li>
-            <li class="nav-item"><a href="">kontakt</a> </li>
-        </ul>
-    </nav>
+<nav class="nav">
+    <div class="nav-space">
+        <div class="nav-item">
+            <a class="nav-link" href="">home</a>
+            <a class="nav-link" href="">usługi</a>
+            <a class="nav-link" href="">cennik</a>
+            <a class="nav-link" href="">kontakt</a>
+        </div>
+    </div>
+</nav>
 
-    <main class="main">
+<main class="main">
         <h2>o nas</h2>
 
-        <div class="main-img one">
 
-            <div class="main-bg">
+    <section class="main-description">
+
+        <div class="main-img">
+            <div class="main-shadow">
                 <div class="main-text">
-                    <h1>Creative Design</h1>
-                    <p>z nami stworzysz swoją wymarzoną stronę internetową!</p>
+                    <h2>kochamy kawe</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores accusamus rerum nostrum
+                        debitis voluptatem mollitia?</p>
                 </div>
             </div>
         </div>
 
-        <div class="main-img two">
 
-            <div class="main-bg">
-                <div class="main-text">
-                    <h1>Creative Design</h1>
-                    <p>z nami stworzysz swoją wymarzoną stronę internetową!</p>
-                </div>
+        <div class="about-us-box middle">
+            <div class="about-us-bg"></div>
+            <div class="about-us-text">
+                <h3>Jestśmy kreatywni</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit veniam incidunt alias
+                    adipisci sequi perferendis architecto nemo? Animi, laboriosam provident.</p>
             </div>
         </div>
 
-        <div class="main-img three">
+    </section>
+</main>
 
-            <div class="main-bg">
-                <div class="main-text">
-                    <h1>Creative Design</h1>
-                    <p>z nami stworzysz swoją wymarzoną stronę internetową!</p>
-                </div>
-            </div>
-        </div>
+<body>
 
-    </main>
-
-    <footer class="footer">
-        <p>&copy; 2022 Creative Design
-            <span class="icon-box">
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            </span>
-        </p>
-    </footer>
 </body>
 
 </html>
