--- a/projekt/responsywna2/index.html
+++ b/projekt/responsywna2/index.html
@@ -15,25 +15,70 @@
 </head>
 
 <body>
-    <nav class="nav">
 
-        <div class="nav-link">
-            <a href="">home</a>
-            <a href="">o nas</a>
-            <a href="">produkty</a>
-            <a href="">kontakt</a>
+    <nav class="nav">
+        <div class="container">
+            <button class="burger-icon"><i class="fa-solid fa-bars"></i></button>
+            <div class="nav-item">
+                <a href="" class="nav-link">home</a>
+                <a href="" class="nav-link">o nas</a>
+                <a href="" class="nav-link">produkty</a>
+                <a href="" class="nav-link">kontakt</a>
+            </div>
         </div>
     </nav>
 
     <header class="header">
         <div class="header-img">
             <div class="header-text">
-                <h1></h1>
-                <p></p>
+                <h1>creative<span>design</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
             </div>
             <div class="header-shadow"></div>
         </div>
     </header>
+
+    <main class="main">
+        <section id="about-us" class="about-us container">
+            <h2 class="section-title">o nas</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, illo aliquid vero itaque ducimus
+                incidunt iure sequi nihil obcaecati perferendis.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, perspiciatis? Molestias expedita
+                reiciendis velit id nihil fugit sint repellat incidunt.</p>
+        </section>
+
+        <section id="products" class="products container">
+            <h2 class="section-title">produkty</h2>
+
+
+            <div class="products-box">
+                <div class="main-img one">
+                    <div class="main-text">
+                        <h2>najnowsze technologie</h2>
+                    </div>
+                </div>
+
+                <div class="main-img two">
+                    <div class="main-text">
+                        <h2>user friendly</h2>
+                    </div>
+                </div>
+
+                <div class="main-img three">
+                    <div class="main-text">
+                        <h2>kompatybilne z wieloma urządzeniami</h2>
+                    </div>
+                </div>
+
+                <div class="main-img four">
+                    <div class="main-text">
+                        <h2>przyjazne dzieciom</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
 
 </html>
