--- a/projekt/responsywna2/index.html
+++ b/projekt/responsywna2/index.html
@@ -16,68 +16,76 @@
 
 <body>
 
-    <nav class="nav">
-        <div class="container">
-            <button class="burger-icon"><i class="fa-solid fa-bars"></i></button>
-            <div class="nav-item">
-                <a href="" class="nav-link">home</a>
-                <a href="" class="nav-link">o nas</a>
-                <a href="" class="nav-link">produkty</a>
-                <a href="" class="nav-link">kontakt</a>
-            </div>
+    <nav>
+        <div class="container"></div>
+        <button class="burger-icon"><i class="fa-solid fa-bars"></i></button>
+        <div class="nav-item">
+            <a href="#aboutus" class="nav-link">home</a>
+            <a href="#product" class="nav-link">o nas</a>
+            <a href="" class="nav-link">produkty</a>
+            <a href="" class="nav-link">kontatk</a>
         </div>
     </nav>
 
-    <header class="header">
+    <header>
+
+
         <div class="header-img">
             <div class="header-text">
                 <h1>creative<span>design</span></h1>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             </div>
             <div class="header-shadow"></div>
         </div>
     </header>
 
-    <main class="main">
-        <section id="about-us" class="about-us container">
+    <main>
+
+        <section id="aboutus" class="about-us container">
             <h2 class="section-title">o nas</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, illo aliquid vero itaque ducimus
-                incidunt iure sequi nihil obcaecati perferendis.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, perspiciatis? Molestias expedita
-                reiciendis velit id nihil fugit sint repellat incidunt.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit omnis quam dignissimos quas officiis
+                culpa fugit. Labore, pariatur voluptatum? Vel? Lorem ipsum dolor sit amet consectetur.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis dolore repellendus ea similique
+                perspiciatis quibusdam.</p>
         </section>
 
-        <section id="products" class="products container">
-            <h2 class="section-title">produkty</h2>
-
+        <section id="product" class="product container">
+            <h2 class="section-title">o nas</h2>
 
             <div class="products-box">
-                <div class="main-img one">
-                    <div class="main-text">
-                        <h2>najnowsze technologie</h2>
+
+                <div class="product first-product">
+                    <div class="hero-text">
+                        <h3>przyjazne dzieciom</h3>
+                    </div>
+                    <div class="hero-bg"></div>
+                </div>
+
+                <div class="product second-product">
+                    <div class="hero-bg"></div>
+                    <div class="hero-text">
+                        <h3>najnowsze technologie</h3>
                     </div>
                 </div>
 
-                <div class="main-img two">
-                    <div class="main-text">
-                        <h2>user friendly</h2>
+                <div class="product third-product">
+                    <div class="hero-bg"></div>
+                    <div class="hero-text">
+                        <h3>user friendly</h3>
                     </div>
                 </div>
 
-                <div class="main-img three">
-                    <div class="main-text">
-                        <h2>kompatybilne z wieloma urządzeniami</h2>
+                <div class="product fourth-product">
+                    <div class="hero-bg"></div>
+                    <div class="hero-text">
+                        <h3>kompatybilne z wieloma urządzeniami</h3>
                     </div>
                 </div>
-
-                <div class="main-img four">
-                    <div class="main-text">
-                        <h2>przyjazne dzieciom</h2>
-                    </div>
-                </div>
+                
             </div>
         </section>
     </main>
+
 
 </body>
 
