--- a/projekt/responsywna2/index.html
+++ b/projekt/responsywna2/index.html
@@ -49,7 +49,7 @@
                 perspiciatis quibusdam.</p>
         </section>
 
-        <section id="product" class="product container">
+        <section id="product" class="products  container">
             <h2 class="section-title">o nas</h2>
 
             <div class="products-box">
